- replace unsafe usage with varhandle